# haskelisp

./: .gitignore  README.md  README.org  haskelisp.cabal  invoke  plugin_is_GPL_compatible.c  stack.yaml
cbits/: emacs-module.h
src/: Emacs.hs
src/Emacs/: Buffer.hs  Class.hs  Command.hs  Core.hs  Function.hs  Internal.hs  Keymap.hs  Module.hs  NAdvice.hs  Symbol.hs  Type.hs
src/Emacs/Internal/: FFI.hs  Types.hs
test/: CoreTest.hs  InternalTest  InternalTest.hs
