name:                haskelisp
version:             0.1.1.0
synopsis:            Write Emacs module in Haskell, using Emacs 25's Dynamic Module feature
description:         Write Emacs module in Haskell, using Emacs 25's Dynamic Module feature.
homepage:            http://github.com/githubuser/haskelisp#readme
license:             GPL-3
license-file:        LICENSE
author:              Takenari Shinohara
maintainer:          takenari.shinohara@gmail.com
copyright:           2016 Takenari Shinohara
category:            Editor, Emacs
build-type:          Simple
extra-source-files:  README.md
                   , cbits/*.c
                   , cbits/*.h
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Emacs
                     , Emacs.Type
                     , Emacs.Core
                     , Emacs.Symbol
                     , Emacs.Function
                     , Emacs.Command
                     , Emacs.NAdvice
                     , Emacs.Module
                     , Emacs.Keymap
  build-depends:       base >= 4.8 && < 5
                     , protolude
                     , containers
                     , mtl
                     , text
  default-language:    Haskell2010
  include-dirs:        cbits/
  c-sources:           cbits/stab.c

-- executable edm.so
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   -- extra-libraries:     HSrts-ghc7.10.3
--   cc-options:          -fPIC
--   ghc-options:         -shared -dynamic -fPIC -lHSrts-ghc7.10.3
--   build-depends:       base
--                      , haskelisp
--                      , text
--                      , protolude
--                      , turtle
--                      , system-filepath
--                      , foldl
--   default-language:    Haskell2010

-- test-suite haskelisp-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , haskelisp
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskelisp
